--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
         <%= content_tag :div, msg, :id => "flash_#{name}" %>
       <%- end -%>
       
+      <%= render :partial => 'search' %>
+
       <%- if show_title? -%>
         <h1><%=h yield(:title) %></h1>
       <%- end -%>
