--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,7 +1,15 @@
 body {
-  background-color: #4B7399;
-  font-family: Verdana, Helvetica, Arial;
-  font-size: 14px;
+  background-color: #ffffff;
+  color: #000000;
+  background-image: url(background.png);
+  background-position: top;
+  background-repeat: repeat-x;
+  font-family: verdana, arial, helvetica, sans-serif
+}
+
+h1,h2,h3,h4,h5,h6 {
+  font-family: georgia, times, serif;
+  color: #020202;
 }
 
 a img {
@@ -9,7 +17,11 @@ a img {
 }
 
 a {
-  color: #0000FF;
+  color: #000000;
+  text-decoration: none;
+}
+a:hover {
+  color: #020250;
 }
 
 .clear {
@@ -20,62 +32,12 @@ a {
 
 #container {
   width: 75%;
-  margin: 0 auto;
-  background-color: #FFF;
-  padding: 20px 40px;
-  border: solid 1px black;
-  margin-top: 20px;
+  margin: auto;
 }
-
-#flash_notice, #flash_error {
-  padding: 5px 8px;
-  margin: 10px 0;
+p.info {
+  font-size: 80%;
 }
-
-#flash_notice {
-  background-color: #CFC;
-  border: solid 1px #6C6;
-}
-
-#flash_error {
-  background-color: #FCC;
-  border: solid 1px #C66;
-}
-
-.fieldWithErrors {
-  display: inline;
-}
-
-#errorExplanation {
-  width: 400px;
-  border: 2px solid #CF0000;
-  padding: 0px;
-  padding-bottom: 12px;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
-}
-
-#errorExplanation h2 {
-  text-align: left;
-  font-weight: bold;
-  padding: 5px 5px 5px 15px;
-  font-size: 12px;
-  margin: 0;
-  background-color: #c00;
-  color: #fff;
-}
-
-#errorExplanation p {
-  color: #333;
-  margin-bottom: 0;
-  padding: 8px;
-}
-
-#errorExplanation ul {
-  margin: 2px 24px;
-}
-
-#errorExplanation ul li {
-  font-size: 12px;
-  list-style: disc;
+p.info a {
+  font-style: oblique;
+  text-decoration: underline;
 }
